checked the gan

--- a/_3_1_GLM_on_GAN.ipynb
+++ b/_3_1_GLM_on_GAN.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-09T21:06:11.003076100Z",
-     "start_time": "2023-05-09T21:06:10.295218500Z"
-    },
     "pycharm": {
      "is_executing": true,
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-05-09T22:43:37.625948900Z",
+     "start_time": "2023-05-09T22:43:37.613793700Z"
     }
    },
    "outputs": [],
@@ -20,10 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-05-09T22:43:38.044335400Z",
+     "start_time": "2023-05-09T22:43:38.028189600Z"
     }
    },
    "outputs": [],
@@ -31,10 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-05-09T22:43:38.535233100Z",
+     "start_time": "2023-05-09T22:43:38.431130200Z"
     }
    },
    "outputs": [],
@@ -45,10 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-05-09T22:43:39.929544300Z",
+     "start_time": "2023-05-09T22:43:39.923486300Z"
     }
    },
    "outputs": [],
@@ -58,209 +70,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-05-09T22:43:40.796382100Z",
+     "start_time": "2023-05-09T22:43:40.765909400Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>VehPower</th>\n",
-       "      <th>VehAge</th>\n",
-       "      <th>DrivAge</th>\n",
-       "      <th>Density</th>\n",
-       "      <th>BonusMalus</th>\n",
-       "      <th>Exposure</th>\n",
-       "      <th>ClaimNb_0.0</th>\n",
-       "      <th>ClaimNb_1.0</th>\n",
-       "      <th>ClaimNb_2.0</th>\n",
-       "      <th>ClaimNb_3.0</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Region_R83</th>\n",
-       "      <th>Region_R91</th>\n",
-       "      <th>Region_R93</th>\n",
-       "      <th>Region_R94</th>\n",
-       "      <th>Area_A</th>\n",
-       "      <th>Area_B</th>\n",
-       "      <th>Area_C</th>\n",
-       "      <th>Area_D</th>\n",
-       "      <th>Area_E</th>\n",
-       "      <th>Area_F</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 52 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   VehPower  VehAge  DrivAge  Density  BonusMalus  Exposure  ClaimNb_0.0   \n",
-       "0       0.0     0.0      1.0      1.0         0.0       1.0          1.0  \\\n",
-       "1       0.0     0.0      0.0      1.0         0.0       0.0          1.0   \n",
-       "2       0.0     0.0      0.0      1.0         0.0       0.0          1.0   \n",
-       "3       0.0     0.0      0.0      1.0         0.0       0.0          1.0   \n",
-       "4       0.0     0.0      0.0      1.0         1.0       1.0          0.0   \n",
-       "\n",
-       "   ClaimNb_1.0  ClaimNb_2.0  ClaimNb_3.0  ...  Region_R83  Region_R91   \n",
-       "0          0.0          0.0          0.0  ...         0.0         0.0  \\\n",
-       "1          0.0          0.0          0.0  ...         0.0         0.0   \n",
-       "2          0.0          0.0          0.0  ...         0.0         0.0   \n",
-       "3          0.0          0.0          0.0  ...         0.0         0.0   \n",
-       "4          0.0          1.0          0.0  ...         0.0         0.0   \n",
-       "\n",
-       "   Region_R93  Region_R94  Area_A  Area_B  Area_C  Area_D  Area_E  Area_F  \n",
-       "0         0.0         0.0     0.0     0.0     0.0     0.0     1.0     0.0  \n",
-       "1         0.0         0.0     0.0     0.0     0.0     0.0     1.0     0.0  \n",
-       "2         0.0         0.0     1.0     0.0     0.0     0.0     0.0     0.0  \n",
-       "3         0.0         1.0     0.0     0.0     0.0     1.0     0.0     0.0  \n",
-       "4         0.0         0.0     0.0     0.0     1.0     0.0     0.0     0.0  \n",
-       "\n",
-       "[5 rows x 52 columns]"
-      ]
+      "text/plain": "   VehPower    VehAge   DrivAge   Density  BonusMalus  Exposure  ClaimNb_0.0  \\\n0  0.229657  0.363335  0.177399  0.016513    0.248371  0.375523          1.0   \n1  0.432339  0.203230  0.186565  0.076455    0.279598  0.546269          1.0   \n2  0.378937  0.483627  0.102161  0.128219    0.187164  0.237351          1.0   \n3  0.145242  0.069385  0.262811  0.017829    0.079022  0.632555          1.0   \n4  0.289994  0.190372  0.537585  0.068592    0.000000  0.125232          1.0   \n\n   ClaimNb_1.0  ClaimNb_2.0  ClaimNb_3.0  ...  Region_R83  Region_R91  \\\n0          0.0          0.0          0.0  ...         0.0         0.0   \n1          0.0          0.0          0.0  ...         0.0         0.0   \n2          0.0          0.0          0.0  ...         0.0         0.0   \n3          0.0          0.0          0.0  ...         0.0         0.0   \n4          0.0          0.0          0.0  ...         0.0         0.0   \n\n   Region_R93  Region_R94  Area_A  Area_B  Area_C  Area_D  Area_E  Area_F  \n0         0.0         0.0     0.0     0.0     0.0     0.0     1.0     0.0  \n1         0.0         0.0     0.0     0.0     1.0     0.0     0.0     0.0  \n2         0.0         0.0     0.0     0.0     0.0     0.0     1.0     0.0  \n3         0.0         0.0     0.0     0.0     0.0     1.0     0.0     0.0  \n4         1.0         0.0     0.0     0.0     0.0     0.0     1.0     0.0  \n\n[5 rows x 52 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>VehPower</th>\n      <th>VehAge</th>\n      <th>DrivAge</th>\n      <th>Density</th>\n      <th>BonusMalus</th>\n      <th>Exposure</th>\n      <th>ClaimNb_0.0</th>\n      <th>ClaimNb_1.0</th>\n      <th>ClaimNb_2.0</th>\n      <th>ClaimNb_3.0</th>\n      <th>...</th>\n      <th>Region_R83</th>\n      <th>Region_R91</th>\n      <th>Region_R93</th>\n      <th>Region_R94</th>\n      <th>Area_A</th>\n      <th>Area_B</th>\n      <th>Area_C</th>\n      <th>Area_D</th>\n      <th>Area_E</th>\n      <th>Area_F</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.229657</td>\n      <td>0.363335</td>\n      <td>0.177399</td>\n      <td>0.016513</td>\n      <td>0.248371</td>\n      <td>0.375523</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.432339</td>\n      <td>0.203230</td>\n      <td>0.186565</td>\n      <td>0.076455</td>\n      <td>0.279598</td>\n      <td>0.546269</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.378937</td>\n      <td>0.483627</td>\n      <td>0.102161</td>\n      <td>0.128219</td>\n      <td>0.187164</td>\n      <td>0.237351</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.145242</td>\n      <td>0.069385</td>\n      <td>0.262811</td>\n      <td>0.017829</td>\n      <td>0.079022</td>\n      <td>0.632555</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.289994</td>\n      <td>0.190372</td>\n      <td>0.537585</td>\n      <td>0.068592</td>\n      <td>0.000000</td>\n      <td>0.125232</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 52 columns</p>\n</div>"
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,10 +818,10 @@
      "evalue": "name 'Generator' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m generator \u001b[38;5;241m=\u001b[39m \u001b[43mGenerator\u001b[49m(\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;241m128\u001b[39m,\n\u001b[1;32m      3\u001b[0m     [\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m,\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m11\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m22\u001b[39m, \u001b[38;5;241m6\u001b[39m\n\u001b[1;32m      6\u001b[0m   ],\n\u001b[1;32m      7\u001b[0m     hidden_sizes\u001b[38;5;241m=\u001b[39mparse_int_list(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m256,128\u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[1;32m      8\u001b[0m     bn_decay\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.9\u001b[39m\n\u001b[1;32m      9\u001b[0m )\n\u001b[1;32m     11\u001b[0m load_or_initialize(generator, options\u001b[38;5;241m.\u001b[39minput_generator)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Generator' is not defined"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[2], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m generator \u001B[38;5;241m=\u001B[39m \u001B[43mGenerator\u001B[49m(\n\u001B[1;32m      2\u001B[0m     \u001B[38;5;241m128\u001B[39m,\n\u001B[1;32m      3\u001B[0m     [\n\u001B[1;32m      4\u001B[0m     \u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m1\u001B[39m,\n\u001B[1;32m      5\u001B[0m     \u001B[38;5;241m5\u001B[39m, \u001B[38;5;241m11\u001B[39m, \u001B[38;5;241m2\u001B[39m, \u001B[38;5;241m22\u001B[39m, \u001B[38;5;241m6\u001B[39m\n\u001B[1;32m      6\u001B[0m   ],\n\u001B[1;32m      7\u001B[0m     hidden_sizes\u001B[38;5;241m=\u001B[39mparse_int_list(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m256,128\u001B[39m\u001B[38;5;124m\"\u001B[39m),\n\u001B[1;32m      8\u001B[0m     bn_decay\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0.9\u001B[39m\n\u001B[1;32m      9\u001B[0m )\n\u001B[1;32m     11\u001B[0m load_or_initialize(generator, options\u001B[38;5;241m.\u001B[39minput_generator)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'Generator' is not defined"
      ]
     }
    ],
