model training runs

--- a/_2_3_Gan.ipynb
+++ b/_2_3_Gan.ipynb
@@ -72,6 +72,9 @@
     "ExecuteTime": {
      "end_time": "2023-05-09T21:01:18.407117700Z",
      "start_time": "2023-05-09T21:01:17.414970600Z"
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   },
@@ -408,7 +411,11 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
